--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -44,7 +44,7 @@
           {% endwith %}
 
           {% if current_user.id %}
-            <form method="POST" action="">
+            <form method="POST" action="/passwd">
               <label for="password"><b style="font-size: 20px;">Current Password: </b></label>
               <input type="text" id="old_password" name="old_password"
                      style="background-color:#AEC6CF; min-width:50%; font-size: 20px;"><br><br>
@@ -56,15 +56,13 @@
                      style="background-color:#AEC6CF; min-width:50%; font-size: 20px;"><br><br>
               <input type="submit" value="passwd" class="button"
                      style="background-color:#AEC6CF; min-width:100px; font-size: 20px; font-weight: bold;">
-              <button type="logout" formmethod="get" class="button"
-                      style="font-size: 20px; font-weight: bold;">Logout</button>
             </form>
           {% endif %}
 
           <br>
 
           <form action="/logout" method="get" target="_self">
-            <p id="labelFont"><label><b>Last:</b> Click:</label>
+            <p id="labelFont">
               <button type="submit" formmethod="get" class="button">Logout</button>
             </p>
           </form>
