--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -43,6 +43,28 @@
             {% endif %}
           {% endwith %}
 
+	  <p>
+	  <strong>You are required to change your password by {{pw_change_by}}</strong>
+	      <br><br>
+	      Please enter your current password, a new password, and then reenter the same new password.
+	      <br><br>
+	      <strong>Your password MUST be:</strong>
+	      <br><br>
+	      <ul>
+		  <li> At least <strong>{{min_length}} characters long</strong>
+		  <li> At most <strong>{{max_length}} characters long</strong>
+		  <li> <strong>NOT contain nor be a subset</strong> of the current password
+		  <li> New password must
+		      <strong>NOT have been <a href="https://haveibeenpwned.com/Passwords" target="_blank">Pwned</a></strong>
+		      <br>
+		      <br>
+		      <a href="https://haveibeenpwned.com/Passwords" target="_blank">Pwned</a></strong> passwords are
+		      passwords that have been previously exposed some published data breach.
+	      </ul>
+	  </p>
+
+	  <br>
+
           {% if current_user.id %}
             <form method="POST" action="/passwd">
               <label for="password"><b style="font-size: 20px;">Current Password: </b></label>
@@ -54,17 +76,24 @@
               <label for="password"><b style="font-size: 20px;">Reenter New Password: </b></label>
               <input type="text" id="reenter_new_password" name="reenter_new_password"
                      style="background-color:#AEC6CF; min-width:50%; font-size: 20px;"><br><br>
-              <input type="submit" value="passwd" class="button"
+              <input type="submit" value="Change Password" class="button"
                      style="background-color:#AEC6CF; min-width:100px; font-size: 20px; font-weight: bold;">
             </form>
           {% endif %}
 
           <br>
 
+	  <p>
+	    After you successfully change your password, you will be required to login with your new password.
+	    <br><br>
+	    Alternately you may simply logout, however you will be required to change your password after logging back in.
+	  </p>
+
+          <br>
+
           <form action="/logout" method="get" target="_self">
-            <p id="labelFont">
-              <button type="submit" formmethod="get" class="button">Logout</button>
-            </p>
+            <input type="submit" value="Logout" class="button"
+                   style="background-color:#AEC6CF; min-width:100px; font-size: 20px; font-weight: bold;">
           </form>
         </article>
       </main>
