Typo fix in templates/passwd.html

--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -59,7 +59,7 @@
 		      <br>
 		      <br>
 		      <a href="https://haveibeenpwned.com/Passwords" target="_blank">Pwned</a></strong> passwords are
-		      passwords that have been previously exposed some published data breach.
+		      passwords that have been previously exposed in some published data breach.
 	      </ul>
 	  </p>
 
