Various fixes, update .gitignore
Add charset utf-8 to html files.

Added to .gitignore to ignore vim swap files.

Fix typos in some html files (like txzchk does not do one sanity check;
it has many).

The README.md has been updated with what should be improvements. It is
not fully looked at yet, however.

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>IOCCC Submission Page</title>
     <meta name="description" content="Upload submissions to the IOCCC">
     <link rel="stylesheet" href="static/ioccc.css">
@@ -90,7 +91,7 @@
             <p>We <b>highly recommend</b> that you use
             <a href="https://github.com/ioccc-src/mkiocccentry">mkiocccentry(1)</a>
             to create your submit file as it <b>must pass</b> the
-            <a href="https://github.com/ioccc-src/mkiocccentry">txzchk(1)</a> sanity check,
+            <a href="https://github.com/ioccc-src/mkiocccentry">txzchk(1)</a> sanity checks,
             and when the uncompressed tarball is untarred, the resulting directory <b>must pass</b>
             <a href="https://github.com/ioccc-src/mkiocccentry">chkentry(1)</a>.</p>
 
