--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>IOCCC Change Password</title>
     <meta name="description" content="Change your IOCCC Password">
     <link rel="stylesheet" href="static/ioccc.css">
