--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -8,6 +8,8 @@
     <title>IOCCC Change Password</title>
     <meta name="description" content="Change your IOCCC Password">
     <link rel="stylesheet" href="static/ioccc.css">
+    <link rel="apple-touch-icon" href="static/apple-touch-icon.png">
+    <link rel="icon" sizes="180x180" href="static/apple-touch-icon.png">
     <script src="static/ioccc.js" defer></script>
   </head>
   <body>
