--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Change your IOCCC Password">
     <link rel="stylesheet" href="static/ioccc.css">
     <link rel="apple-touch-icon" href="static/apple-touch-icon.png">
+    <link rel="apple-touch-icon-precomposed" href="static/apple-touch-icon-precomposed.png">
     <link rel="icon" sizes="180x180" href="static/apple-touch-icon.png">
     <script src="static/ioccc.js" defer></script>
   </head>
