--- a/templates/login.html
+++ b/templates/login.html
@@ -65,7 +65,7 @@
 		     style="background-color:#AEC6CF; min-width:50%; font-size: 20px;">
 	      <br><br>
 	      <label for="password"><b style="font-size: 20px;">Password: </b></label>
-	      <input type="text" id="password" name="password" placeholder="Enter Password"
+	      <input type="password" id="password" name="password" placeholder="Enter Password"
 		     style="background-color:#AEC6CF; min-width:50%; font-size: 20px; -webkit-text-security: circle">
 	      <br><br>
 	      <input type="submit" value="Login" class="button"
